--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,8 @@
     </table>
 </div>
 <div class="d-flex justify-content-center">
-    <a href="%" class="btn btn-outline-primary">Add user</a>
+    <a href="/login" class="btn btn-outline-primary">Login</a>
+    <a href="/signup" class="btn btn-outline-secondary">Register</a>
 </div>
 
 
