--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
         <thead class="">
             <th>Username</th>
             <th>Password</th>
+            <th>Email</th>
             <th>Role</th>
             <th>Action</th>
         </thead>
@@ -17,9 +18,10 @@
               <tr class="bg-primary">
                 <td>{{data[1]}}</td>
                 <td>{{data[2]}}</td>
-                <td>{% if data[3] == 1 %} 
+                <td>{{data[3]}}</td>
+                <td>{% if data[4] == 1 %} 
                     Administrator
-                    {% elif data[3] == 2 %}
+                    {% elif data[4] == 2 %}
                     User
                     {% endif %}</td>
                 <td></td>
